Account for video rotation in OnVideoNaturalSizeChange()

This was always wrong, but now that natural size chages are always
emitted (commit 232673e8578e7acbb479bef753683b402719fd74 [formerly 810dee4b15363fc5e1af55880afe79ebf5a1ebda]) they are
causing all non-square rotated videos to render with the wrong
aspect ratio.

This CL ensures that sizes are treated the same way on this path as
in OnMetadata().

BUG=632624

Review-Url: https://codereview.chromium.org/2198403002
Cr-Commit-Position: refs/heads/master@{#409112}

Former-commit-id: 2c4784280c9414e0bd4daf9f0c606f8e52de117a